<resources>
    <string name="app_name">proj1</string>
    <string name="result">Вычислить</string>
    <string name="sum">Сумма</string>
    <string name="average">Среднее</string>
    <string name="number">Число</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number0">0</string>
    <string name="dot">.</string>
    <string name="number_plus">+</string>
    <string name="minus">-</string>
    <string name="divide">\u00F7</string>
    <string name="equals">=</string>
    <string name="multiply">\u00D7</string>
    <string name="empty">_</string>
</resources>