<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_columnSpan="3"
    android:gravity="center">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number1"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="5dp"/>
    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number2"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="5dp"/>
    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number3"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="5dp"/>
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number4"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number5"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number6"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="5dp"/>
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number7"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number8"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number9"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="5dp"/>

    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number0"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="5dp"
            android:layout_span="2"/>
        <Button
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textSize="@dimen/button_text_size"
            android:layout_margin="5dp"/>
    </TableRow>

</TableLayout>