<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number1"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:text="@string/number2"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toTopOf="@+id/button_1" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:text="@string/number3"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toTopOf="@+id/button_2" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:text="@string/number4"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number5"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toTopOf="@+id/button_4" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:text="@string/number6"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toTopOf="@+id/button_5" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number7"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number8"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toTopOf="@+id/button_7" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:text="@string/number9"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toTopOf="@+id/button_8" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/number0"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="@+id/button_8"
        app:layout_constraintStart_toStartOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:text="@string/dot"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintTop_toTopOf="@+id/button_0"
        app:layout_constraintStart_toEndOf="@id/button_0"/>

</androidx.constraintlayout.widget.ConstraintLayout>