<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_screen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_screen_height_portrait"
        android:background="@color/material_dynamic_tertiary80"
        android:padding="@dimen/main_screen_padding"
        android:hint="@string/empty"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/main_screen_text_size"
        android:gravity="bottom|end"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/main_screen"
        app:layout_constraintStart_toStartOf="@id/main_screen"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        android:text="@string/number7"
        android:textSize="@dimen/button_text_size"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/main_screen"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        android:text="@string/number8"
        android:textSize="@dimen/button_text_size"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/main_screen"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        android:text="@string/number9"
        android:textSize="@dimen/button_text_size"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/main_screen"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintEnd_toEndOf="@id/main_screen"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        android:text="@string/number_plus"
        android:textSize="@dimen/button_text_size"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/button_7"
        app:layout_constraintStart_toStartOf="@id/main_screen"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        android:text="@string/number4"
        android:textSize="@dimen/button_text_size"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/button_8"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        android:text="@string/number5"
        android:textSize="@dimen/button_text_size"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_9"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        android:text="@string/number6"
        android:textSize="@dimen/button_text_size"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="@id/main_screen"
        app:layout_constraintBottom_toTopOf="@id/button_divide"
        android:text="@string/minus"
        android:textSize="@dimen/button_text_size"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/button_4"
        app:layout_constraintStart_toStartOf="@id/main_screen"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        android:text="@string/number1"
        android:textSize="@dimen/button_text_size"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/button_5"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintBottom_toTopOf="@id/button_dot"
        android:text="@string/number2"
        android:textSize="@dimen/button_text_size"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@id/button_divide"
        app:layout_constraintBottom_toTopOf="@id/button_equals"
        android:text="@string/number3"
        android:textSize="@dimen/button_text_size"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintEnd_toEndOf="@id/main_screen"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        android:text="@string/divide"
        android:textSize="@dimen/button_text_size"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/button_1"
        app:layout_constraintStart_toStartOf="@id/main_screen"
        app:layout_constraintEnd_toStartOf="@id/button_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/number0"
        android:textSize="@dimen/button_text_size"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_equals"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/dot"
        android:textSize="@dimen/button_text_size"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_equals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_dot"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/equals"
        android:textSize="@dimen/button_text_size"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/button_divide"
        app:layout_constraintStart_toEndOf="@id/button_equals"
        app:layout_constraintEnd_toEndOf="@id/main_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/multiply"
        android:textSize="@dimen/button_text_size"/>
</androidx.constraintlayout.widget.ConstraintLayout>